<resources>
    <string name="app_name">AboutME</string>
    <string name="name">Bino</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio"> Experiment with adding an ImageView above the TextView inside the ScrollView.

        When you run the app, this image, unlike the star, will scroll out of view as the text scrolls up.

Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView. ScrollView > LinerLayout > ImageView + TextView

Below is a skeleton code version for this challenge.

The important thing to remember is that since ScrollView can only have one child, you have to wrap that ImageView and the TextView into a LinearLayout.

There is no solution code provided for this challenge, but the skeleton code below gives you the expected view hierarchy to us. Hey lets use the trololo generate.shhsih
        duichasuihcaisduhcdauhscdushcduhcaidbsciabdicabsiubdjdhehdye huahuahauhauhsu  uahuah suhsush aush

SKELETON code of view hierarchy:</string>
    <string name="me_image">Me Image</string>
    <string name="what_is_the_name">What is your nickname?</string>
    <string name="done">Done</string>

</resources>